[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/boss.png" type="Texture" id=1]
[ext_resource path="res://src/actors/boss.gd" type="Script" id=2]
[ext_resource path="res://assets/phase2.png" type="Texture" id=3]
[ext_resource path="res://assets/phase3.png" type="Texture" id=4]
[ext_resource path="res://assets/strike.png" type="Texture" id=5]
[ext_resource path="res://assets/Hp_under.png" type="Texture" id=6]
[ext_resource path="res://assets/Hp_over.png" type="Texture" id=7]

[node name="Node2D" type="KinematicBody2D"]
position = Vector2( 56, -32 )
collision_layer = 16
collision_mask = 4
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="boss" type="Sprite" parent="."]
position = Vector2( -64, -120 )
texture = ExtResource( 1 )

[node name="cataBox" type="CollisionPolygon2D" parent="."]
position = Vector2( -64, -128 )
polygon = PoolVector2Array( 249, -195.4, 267, -189.4, 267, -188.3, 280, -182.3, 280, -180.9, 291.9, -170, 292.5, -170, 301.5, -175, 312.3, -175, 320, -172.4, 320, -170.9, 334, -155.8, 334, -151.6, 329.3, -141, 327.7, -141, 318.8, -133, 295, -133, 295, -135, 285, -142, 285, -144.3, 281, -149.3, 281, -157.2, 281.6, -159.6, 273.1, -169, 271.5, -169, 243.5, -183, 239.6, -183, 227, -174.9, 227, -173.5, 222, -163.5, 222, -158.7, 215.8, -141, 232.4, -141, 255, -132.4, 255, -130.8, 288, -98.8, 288, -96, 294, -75.3, 294, -54.8, 290.4, -36.7, 301, -11.4, 301, 34.3, 289.5, 76, 288.4, 76, 277.4, 104, 276, 104, 260, 125, 257.7, 125, 235.7, 142, -248, 142, -248, 139.7, -263, 122.8, -263, 120.5, -272, 105.6, -272, 82, -270.5, 82, -264.6, 56, -263.3, 56, -252.3, 31, -250.9, 31, -240.9, 20, -238.7, 20, -220.7, 6, -218.4, 6, -203.4, 0, -181.9, 0, -154.7, -23, -152.5, -23, -129.5, -35, -124, -35, -77.7, -34, -60.9, -54, -58.5, -54, -28.6, -72, -24.4, -72, -13.4, -76, 32.1, -76, 54, -73.3, 61.9, -87, 63.1, -87, 76.1, -101, 78.2, -101, 94.3, -114, 97.6, -114, 119.6, -122, 157, -122, 173.3, -134, 177.6, -134, 199.1, -138.7, 213.6, -181, 215, -181, 223, -191, 225.4, -191, 231, -195, 231, -197, 249, -197 )

[node name="phase2" type="Sprite" parent="."]
visible = false
position = Vector2( -48, -184 )
texture = ExtResource( 3 )

[node name="cocoonBox" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -48, -184 )
polygon = PoolVector2Array( 12, -203.8, 45, -199.8, 45, -198.3, 83, -180.3, 83, -178.8, 105, -156.8, 105, -154.5, 113, -140.5, 113, -133, 115.2, -112, 113.5, -112, 110, -99, 110, -97.7, 113, -93.7, 113, -28, 111.4, -28, 104, -9.5, 104, -2, 106.2, 26, 104.1, 26, 75.1, 75, 73.7, 75, 68, 79.9, 68, 114, 66.4, 114, 62.4, 124, 60.9, 124, 51, 135.7, 51, 142, 53.3, 159, 51.4, 159, 47.4, 170, 45.9, 170, 11.9, 207, 6.5, 207, -9, 215.3, -9, 211.5, -14.4, 202, -10.7, 202, -7.5, 199.3, -23, 183.8, -23, 181.5, -34, 160.5, -34, 138.8, -50, 123.9, -50, 121.7, -57, 112.7, -57, 91.7, -56.5, 90.3, -68, 78.8, -68, 75.7, -76, 66.8, -76, 64.5, -81, 54.5, -81, 50, -83.2, 27, -81.4, 27, -76.6, 14.2, -98, -15.4, -98, -18.5, -106, -31.4, -106, -35.7, -116, -59.6, -116, -63, -115.1, -94, -120, -110.7, -120, -132.3, -112.4, -154, -111, -154, -97, -172, -95.7, -172, -82.7, -183, -80.5, -183, -46.5, -200, -40.5, -200, -34.5, -203, -24.2, -203, -16, -203.8, -16, -205, 12, -205 )
disabled = true

[node name="phase3" type="Sprite" parent="."]
visible = false
position = Vector2( -64, -272 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="butBox" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -63.1913, -270.514 )
scale = Vector2( 0.8, 0.8 )
polygon = PoolVector2Array( -6, -306.6, -6, -305, 7, -296, 7, -292.7, 23, -270.7, 23, -263, 23.9, -250, 28.2, -250, 50, -245.6, 50, -243.7, 58, -234.8, 58, -218.8, 54.6, -204, 53.1, -204, 39, -179.5, 39, -170.6, 40.1, -169, 46.6, -169, 68, -176.4, 68, -177.2, 105, -197.3, 105, -198, 181.4, -251, 184.6, -251, 235.6, -274, 292, -274, 292, -272.2, 320, -257.2, 320, -255.8, 357, -219.8, 357, -216.7, 364, -208.8, 364, -204.5, 383, -167.5, 383, -163.3, 390, -146.4, 390, -136.3, 394, -124.3, 394, -92, 396.1, -54, 394.6, -54, 389.6, -31, 388.4, -31, 379.4, -8, 378.1, -8, 366.1, 10, 364.7, 10, 345.8, 27, 343.6, 27, 332.5, 33, 327.1, 33, 270, 46.5, 270, 47.4, 239, 58.4, 239, 59, 229, 67, 229, 73.5, 241.1, 95, 242, 95, 267, 128.3, 267, 131.5, 282, 160.5, 282, 165.5, 288, 177.5, 288, 183.7, 294, 203.7, 294, 247.6, 280, 267, 277.7, 267, 266.7, 275, 262.5, 275, 248.5, 283, 242.1, 283, 226.2, 287, 181.6, 287, 154, 275.3, 154, 273.8, 124, 243.8, 124, 241.7, 87, 193.7, 87, 191.5, 68, 151.5, 68, 146.4, 47.6, 93, 41, 89.4, 30, 126.3, 30, 143, 28, 143, 25, 147, 17, 147, 17, 145.7, 10, 144.7, 10, 142.8, 6, 138.8, 6, 122, -2.5, 87, -3.5, 87, -9, 90.1, -9, 91.6, -14, 99.6, -14, 105.4, -28, 135.4, -28, 141.3, -37.6, 168, -38.8, 168, -53.7, 200, -54.9, 200, -73.9, 228, -75.1, 228, -117.1, 275, -119.7, 275, -147.6, 287, -185, 287, -185, 285.8, -210, 282.8, -210, 281.4, -232, 273.4, -232, 271.9, -255, 251.9, -255, 248, -256, 200, -254.7, 200, -248.6, 170, -247.4, 170, -237.4, 142, -236.2, 142, -224.2, 119, -223, 119, -194, 78.4, -194, 76.8, -191.4, 66.4, -195.9, 61, -197.4, 61, -228.4, 47, -233.3, 47, -308, 26.5, -308, 25.1, -322, 16.1, -322, 14.7, -339, -5.29999, -339, -7.5, -351, -28.5, -351, -31.7, -358, -53.7, -358, -117.2, -352.7, -148, -351.5, -148, -344.5, -171, -343.3, -171, -318.3, -223, -316.9, -223, -286.9, -255, -284.5, -255, -249.6, -276, -244, -276, -208, -277, -208, -275.5, -179, -268.6, -179, -267.4, -147, -254.3, -147, -253.1, -51.3, -188, -48.5, -188, -29.5, -177, -25.7, -177, -4.90002, -170.7, -0.799988, -179, -22, -202.2, -22, -205, -24.2, -227, -22, -227, -14, -238, -11.6, -238, 10, -252.1, 10, -262.6, 7.59998, -269, 6.79999, -269, -4.09998, -288, -5.5, -288, -19.5, -295, -29.4, -295, -22, -288.9, -22, -286.5, -18, -278.5, -18, -275.3, -29, -261, -31.5, -261, -36.4, -258, -45.4, -258, -52, -260.6, -52, -262.1, -64, -275.2, -64, -279.4, -60.4, -289, -59, -289, -55, -294, -52.5, -294, -46, -297.2, -46, -300.7, -41, -307, -38, -307, -27, -309.5, -27, -311.5 )
disabled = true

[node name="strike" type="Sprite" parent="."]
visible = false
position = Vector2( -56, -16 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="strikeBox" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -72, -16 )
scale = Vector2( 0.8, 0.8 )
polygon = PoolVector2Array( -123, -220.9, -123, -219.5, -35, -197.6, -35, -196.4, 23, -177.4, 23, -176.3, 77, -150.3, 77, -149.1, 109, -130.1, 109, -129.1, 238, -43.1, 238, -42, 272, -16.3, 272, -28, 274.1, -28, 286.2, -39, 290.8, -39, 302, -40.2, 302, -38.5, 312, -35.5, 312, -33.9, 317.7, -29, 326.4, -29, 348, -20.4, 348, -18.8, 359, -7.79999, 359, 6, 366.2, 6, 387, 10.4, 387, 11.6, 393, 13.6, 393, 15.3, 399.4, 22.7, 398.3, 25, 397.1, 25, 394.1, 30, 391.3, 30, 379.4, 35, 373.2, 35, 277.1, 46, 259, 46, 217.409, 47.4424, 86, 52, -69, 52, -258, 46, -258, 44.9, -325, 39.9, -325, 38.7, -372, 30.7, -372, 29, -377, 25, -377, 19.3, -372, 13, -368.1, 13, -344.8, 7, -356, 3.5, -356, 2.29999, -380, -10.8, -380, -12.2, -401, -33.2, -401, -36.5, -406, -46.5, -406, -59.1, -404.7, -68, -403.4, -68, -400.4, -76, -398.7, -76, -391.7, -82, -388.3, -82, -381.4, -85, -340.9, -85, -309, -82.9, -309, -81.5, -261, -70.6, -261, -69.4, -207.6, -50, -188.1, -50, -183, -51.5, -183, -52.1, -181.3, -64.2, -186.2, -73, -186.9, -73, -196.9, -84, -198.6, -84, -219, -97.9, -219, -99.3, -234, -119.3, -234, -121.4, -239, -129.4, -239, -158, -237.7, -158, -233.7, -179, -232.1, -179, -222.1, -196, -220.8, -196, -199.8, -216, -197.3, -216, -182, -222.3, -182, -224.1 )
disabled = true

[node name="b" type="Area2D" parent="."]
visible = false
position = Vector2( -7.62939e-06, 0 )
scale = Vector2( 1, 1 )

[node name="hitbox" type="CollisionPolygon2D" parent="b"]
position = Vector2( -55.9745, -282.844 )
scale = Vector2( 0.899803, 0.955414 )
polygon = PoolVector2Array( -6, -306.6, -6, -305, 7, -296, 7, -292.7, 23, -270.7, 23, -263, 23.9, -250, 28.2, -250, 50, -245.6, 50, -243.7, 58, -234.8, 58, -218.8, 54.6, -204, 53.1, -204, 39, -179.5, 39, -170.6, 40.1, -169, 46.6, -169, 68, -176.4, 68, -177.2, 105, -197.3, 105, -198, 181.4, -251, 184.6, -251, 235.6, -274, 292, -274, 292, -272.2, 320, -257.2, 320, -255.8, 357, -219.8, 357, -216.7, 364, -208.8, 364, -204.5, 383, -167.5, 383, -163.3, 390, -146.4, 390, -136.3, 394, -124.3, 394, -92, 396.1, -54, 394.6, -54, 389.6, -31, 388.4, -31, 379.4, -8, 378.1, -8, 366.1, 10, 364.7, 10, 345.8, 27, 343.6, 27, 332.5, 33, 327.1, 33, 270, 46.5, 270, 47.4, 239, 58.4, 239, 59, 229, 67, 229, 73.5, 241.1, 95, 242, 95, 267, 128.3, 267, 131.5, 282, 160.5, 282, 165.5, 288, 177.5, 288, 183.7, 294, 203.7, 294, 247.6, 280, 267, 277.7, 267, 266.7, 275, 262.5, 275, 248.5, 283, 242.1, 283, 226.2, 287, 181.6, 287, 154, 275.3, 154, 273.8, 124, 243.8, 124, 241.7, 87, 193.7, 87, 191.5, 68, 151.5, 68, 146.4, 47.6, 93, 41, 89.4, 30, 126.3, 30, 143, 28, 143, 25, 147, 17, 147, 17, 145.7, 10, 144.7, 10, 142.8, 6, 138.8, 6, 122, -2.5, 87, -3.5, 87, -9, 90.1, -9, 91.6, -14, 99.6, -14, 105.4, -28, 135.4, -28, 141.3, -37.6, 168, -38.8, 168, -53.7, 200, -54.9, 200, -73.9, 228, -75.1, 228, -117.1, 275, -119.7, 275, -147.6, 287, -185, 287, -185, 285.8, -210, 282.8, -210, 281.4, -232, 273.4, -232, 271.9, -255, 251.9, -255, 248, -256, 200, -254.7, 200, -248.6, 170, -247.4, 170, -237.4, 142, -236.2, 142, -224.2, 119, -223, 119, -194, 78.4, -194, 76.8, -191.4, 66.4, -195.9, 61, -197.4, 61, -228.4, 47, -233.3, 47, -308, 26.5, -308, 25.1, -322, 16.1, -322, 14.7, -339, -5.29999, -339, -7.5, -351, -28.5, -351, -31.7, -358, -53.7, -358, -117.2, -352.7, -148, -351.5, -148, -344.5, -171, -343.3, -171, -318.3, -223, -316.9, -223, -286.9, -255, -284.5, -255, -249.6, -276, -244, -276, -208, -277, -208, -275.5, -179, -268.6, -179, -267.4, -147, -254.3, -147, -253.1, -51.3, -188, -48.5, -188, -29.5, -177, -25.7, -177, -4.90002, -170.7, -0.799988, -179, -22, -202.2, -22, -205, -24.2, -227, -22, -227, -14, -238, -11.6, -238, 10, -252.1, 10, -262.6, 7.59998, -269, 6.79999, -269, -4.09998, -288, -5.5, -288, -19.5, -295, -29.4, -295, -22, -288.9, -22, -286.5, -18, -278.5, -18, -275.3, -29, -261, -31.5, -261, -36.4, -258, -45.4, -258, -52, -260.6, -52, -262.1, -64, -275.2, -64, -279.4, -60.4, -289, -59, -289, -55, -294, -52.5, -294, -46, -297.2, -46, -300.7, -41, -307, -38, -307, -27, -309.5, -27, -311.5 )
disabled = true

[node name="a" type="Area2D" parent="."]
visible = false
position = Vector2( -7.62939e-06, 0 )
scale = Vector2( 1, 1 )

[node name="hitbox" type="CollisionPolygon2D" parent="a"]
visible = false
position = Vector2( -56, -16 )
scale = Vector2( 0.904904, 0.986653 )
polygon = PoolVector2Array( -123, -220.9, -123, -219.5, -35, -197.6, -35, -196.4, 23, -177.4, 23, -176.3, 77, -150.3, 77, -149.1, 109, -130.1, 109, -129.1, 238, -43.1, 238, -42, 272, -16.3, 272, -28, 274.1, -28, 286.2, -39, 290.8, -39, 302, -40.2, 302, -38.5, 312, -35.5, 312, -33.9, 317.7, -29, 326.4, -29, 348, -20.4, 348, -18.8, 359, -7.79999, 359, 6, 366.2, 6, 387, 10.4, 387, 11.6, 393, 13.6, 393, 15.3, 399.4, 22.7, 398.3, 25, 397.1, 25, 394.1, 30, 391.3, 30, 379.4, 35, 373.2, 35, 277.1, 46, 259, 46, 86, 52, -69, 52, -258, 46, -258, 44.9, -325, 39.9, -325, 38.7, -372, 30.7, -372, 29, -377, 25, -377, 19.3, -372, 13, -368.1, 13, -344.8, 7, -356, 3.5, -356, 2.29999, -380, -10.8, -380, -12.2, -401, -33.2, -401, -36.5, -406, -46.5, -406, -59.1, -404.7, -68, -403.4, -68, -400.4, -76, -398.7, -76, -391.7, -82, -388.3, -82, -381.4, -85, -340.9, -85, -309, -82.9, -309, -81.5, -261, -70.6, -261, -69.4, -207.6, -50, -188.1, -50, -183, -51.5, -183, -52.1, -181.3, -64.2, -186.2, -73, -186.9, -73, -196.9, -84, -198.6, -84, -219, -97.9, -219, -99.3, -234, -119.3, -234, -121.4, -239, -129.4, -239, -158, -237.7, -158, -233.7, -179, -232.1, -179, -222.1, -196, -220.8, -196, -199.8, -216, -197.3, -216, -182, -222.3, -182, -224.1 )
disabled = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" type="TextureProgress" parent="Control"]
margin_left = -320.0
margin_top = -248.0
margin_right = -247.0
margin_bottom = -234.0
max_value = 600.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.403922, 0.184314, 0.184314, 1 )
tint_over = Color( 0.247059, 0.823529, 0.878431, 1 )
tint_progress = Color( 0.952941, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="b" to="." method="_on_b_body_entered"]
[connection signal="body_entered" from="a" to="." method="_on_Area2D_body_entered"]
